[package]
name = "tui-planner"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.82"
crossterm = "0.27.0"
ratatui = "0.26.2"
rusqlite = { version = "0.31.0", features = ["bundle"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_rusqlite = "0.35.0"
tui-textarea = "0.4.0"
